--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -1,5 +1,9 @@
+/* ! IMPORTANT -> DON'T REMOVE, REQUIRED FOR CORRECT LOAD OF FONTS */
+
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,600;0,700;1,100;1,200;1,300;1,400&family=Roboto+Mono:wght@200;300;400&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500&display=swap');
+
 :root{
-    /*? backgrounds */
+/*? backgrounds */
 
     --LMbackground1: #eee;
     --LMbackground2: #eee;
@@ -15,3 +19,101 @@ body{
     margin: 0;
     padding: 0;
 }
+
+/* * Containers */
+.nav{
+    width: 100%;
+    min-height: 4.5rem;
+    height: 10vh;
+    
+    background-color: #fff;
+    box-shadow: 0px 2px 10px #00000010;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    top: 0;
+    position: fixed;
+    z-index: 2;
+
+}
+
+    .menu{
+        z-index: 1;
+        position: fixed;
+        right: 0;
+        width: 20rem;
+        height: 100vh;
+        background-color: #fff;
+        transform: translate(20rem);
+        box-shadow: -4px 2px 10px #00000020;
+        transition: all 300ms;
+    }
+    .menu-showed{
+        z-index: 1;
+        position: fixed;
+        right: 0;
+        width: 20rem;
+        height: 100vh;
+        background-color: #fff;
+        transform: translate(0rem);
+        box-shadow: -4px 2px 10px #00000020;
+        transition: all 300ms;
+
+    }
+
+.content{
+    width: 100%;
+    height: 220vh;
+}
+
+
+
+/* * Buttons */
+    .img-button{
+        width: 2rem;
+        height: 2rem;
+        border: 0;
+        background: 0;
+        margin: 1rem;
+        transition: .2s scale ease;
+        filter: drop-shadow(0px 5px 5px #00000010);
+    }
+
+    .img-button:is(:hover,:focus,:active){
+        scale: 1.1;
+    }
+  
+        .logo{
+            background: url("./images/mcssel.png");
+            background-size: cover;
+            width: 4.5rem;
+            height: 4.5rem;
+            position: relative;
+        }
+        .hamburger{
+            width: 2.2rem;
+            height: 2.2rem;
+            position: relative;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-around;
+            align-items: center;
+        }
+            .line{
+                width: 100%;
+                height: 4px;
+                background-color: #000000;
+            }
+        .github1{
+            background: url("./images/github.png");
+            background-size: cover;
+        }
+        .github2{
+            background: url("./images/github1.png");
+            background-size: cover;
+        }
+
+
+/* * Text */
