--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -2,6 +2,15 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,600;0,700;1,100;1,200;1,300;1,400&family=Roboto+Mono:wght@200;300;400&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500&display=swap');
 
+/* ? Names of fonts */
+/*     font-family: 'Montserrat', sans-serif;
+
+    font-family: 'Roboto', sans-serif;
+
+    font-family: 'Roboto Mono', monospace;
+
+ */
+
 :root{
 /*? backgrounds */
 
@@ -13,6 +22,9 @@
     /*? colors */
 
     /*? fonts */
+    --montserrat: 'Montserrat', sans-serif;;
+    --roboto: 'Roboto', sans-serif;;
+    --roboto-mono: 'Roboto Mono', monospace; ;
 
 }
 body{
@@ -22,7 +34,8 @@ body{
 
 /* * Containers */
 .nav{
-    width: 100%;
+    width: 90%;
+    padding: 0 5%;
     min-height: 4.5rem;
     height: 10vh;
     
@@ -45,28 +58,162 @@ body{
         right: 0;
         width: 20rem;
         height: 100vh;
+        display: flex;
+        flex-direction: column;
+        bottom: 0;
+        height: 90vh;
+        padding-top: 4rem;
         background-color: #fff;
         transform: translate(20rem);
         box-shadow: -4px 2px 10px #00000020;
         transition: all 300ms;
+        padding-top: 4rem;
+
     }
+
+    
     .menu-showed{
         z-index: 1;
         position: fixed;
         right: 0;
         width: 20rem;
         height: 100vh;
+        display: flex;
+        flex-direction: column;
+        bottom: 0;
+        height: 90vh;
+        padding-top: 4rem;
         background-color: #fff;
         transform: translate(0rem);
         box-shadow: -4px 2px 10px #00000020;
         transition: all 300ms;
 
     }
+        .menu-img{
+            width: 100%;
+            min-height: 10rem;
+            height: 11rem;
+            background: url("./images/menuback.jpg");
+            background-size: cover;
+            position: relative;
+            filter: brightness(80%);
+            display: grid;
+            place-items: center;
+        }
+        .menu-img::before{
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background: rgba(255, 255, 255, 0.123);
+            backdrop-filter: blur(2px);
+            -webkit-backdrop-filter: blur(2px);
+        
+        }
+           
+    .menu-button-grid{
+        min-height: 66vh;
+        width: 100%;
+        
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 1.5rem;
+        background: 0;
+    }
 
+
+
+
+.theme{
+    width: 85%;
+    height: 60vh;
+    padding-top: 20vh;
+    padding-bottom: 20vh;
+    padding-inline: 7.5%;
+    background-color: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+        .theme-ilustration{
+            margin: 3rem;
+            min-width: 20rem;
+            width: 40rem;
+            min-height: 30vh;
+                height: 30rem;
+            box-shadow: -10px 10px 10px #00000030;
+            border-radius: 40px;
+            opacity: 85%;
+            background: url("./images/ilustration2.jpg");
+            background-size: cover;
+            background-position: center;
+            position: relative;
+            display: grid;
+            place-items: center;
+            transition: background-size .1s linear;
+            
+        }
+          
+    
+        .theme-description{
+            margin: 3.5rem;
+            padding: 1rem;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            gap: 0;
+            font-weight: normal;
+            font-size: 1rem;
+            position: relative;
+            font-family: var(--roboto);
+            
+        }
 .content{
     width: 100%;
-    height: 220vh;
+    height: 200rem;
 }
+.footer{
+    width: 90%;
+    padding: 2rem 5%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 1rem;
+    background-color: #141416;
+}
+    .footer-box
+    {
+        padding: 1rem;
+        min-width: 10rem;
+        min-height: 10rem;
+        display: flex;
+        justify-content: center;
+        align-items: flex-start;
+        flex-direction: column;
+        filter: contrast(0%);
+        transition: filter .2s linear;
+        opacity: 90%;
+    }
+    .footer-box:is(:focus,:hover,:active){
+        filter: contrast(100%);
+    }
+       .footer-box:nth-child(1){
+        display: grid;
+        place-items: center;
+    }
+
+    .footer-box:nth-child(3){
+        display: flex;
+        justify-content: center;
+        align-items: flex-start;
+      
+    }
+
+         
+
 
 
 
@@ -115,5 +262,173 @@ body{
             background-size: cover;
         }
 
+    .menu-button{
+        border: 0;
+        background: linear-gradient(to right,#EF4134,#FBB040);
+        background-position: center;
+        background-size: 180%;
+        width: 75%;
+        min-height: 3rem;
+        height: 10%;
+        font-family: var(--montserrat);
+        color: #fff;
+        font-size: 0.9rem;
+        border-radius: 15px;
+        font-weight: normal;
+        transition: .1s scale ease-in-out;
+        box-shadow: 0px 3px 10px #00000050;
+    }
+    .menu-button:is(:hover,:active,:focus){
+        scale: 1.1;
+    }
+ 
+
 
 /* * Text */
+    .main-description h2,h3{
+        font-family: var(--roboto);
+        margin: 0;
+        padding: 0;
+        text-shadow: 0px 10px 10px #00000010;
+        
+    }
+    .main-description h2{
+        font-size: 4rem;
+        font-weight: 900;
+        color: #000000;
+    }
+    .main-description h3{
+        font-weight: normal;
+        font-size: 1.5rem;
+        color: transparent;
+        background: linear-gradient(to right,#EF4134,#FBB040);
+        background-clip: text;
+    }
+    .theme-description h4{
+        font-family: var(--roboto);
+        font-weight: 300;
+        color: #000000;
+    }
+/* * Images */
+
+.mrce{
+    width: 10rem;
+    height: 10rem;
+    border: 0;
+    outline: 0;
+}
+    
+/* * Special */
+.special{
+    position: absolute;
+    filter: brightness(120%);
+    border: none;
+    scale: 1.3;
+    transition: .1s scale ease-in-out;
+}
+
+.special:is(:hover,:focus,:active){
+    scale: 1.5;
+    animation: shake 300ms;
+}
+.footer-text{
+    font-family: var(--roboto);
+    color: #fff;
+    opacity: 90%;
+    font-weight: 300;
+    font-size: 0.9rem;
+    margin: 0.2rem;
+    cursor: default;
+}
+    .anim-scale-text:is(:hover,:active,:focus){
+        scale: 1.1;
+    }
+.big-footer-text{
+    font-family: var(--roboto);
+    color: #fff;
+    opacity: 90%;
+    font-weight: 500;
+    margin: 0.3rem;
+    cursor: default;
+    font-size: 1.5rem;
+}
+
+.gradient-text{
+    background-size: 500%;
+    color: transparent;
+    color: #fff;
+    background-clip: text;
+
+}
+.gradient-text b{
+    background-size: 500%;
+    color: transparent;
+    background: linear-gradient(to right,#EF4134,#FBB040);
+    background-clip: text;
+    font-weight: 700;
+}
+/* *Animation */
+
+@keyframes shake {
+    0%{
+        translate: 0%;
+    }
+    50%{
+        translate: -5%;
+    }
+    75%{
+        translate: 5%;
+    }
+    100%{
+        translate: 0%;
+    }
+}
+
+
+/* !MEDIA QUERIES */
+
+/* @media only screen and (max-width: 730px) {
+    .theme{
+        width: 85%;
+        height: 60vh;
+        padding-top: 10vh;
+        padding-bottom: 10vh;
+        padding-inline: 7.5%;
+        background-color: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+    }
+            .theme-ilustration{
+                min-width: 20rem;
+                height: 30vh;
+                box-shadow: -10px 10px 10px #00000030;
+                border-radius: 40px;
+                opacity: 85%;
+                background: url("./images/ilustration2.jpg");
+                background-size: cover;
+                background-position: center;
+                position: relative;
+                display: grid;
+                place-items: center;
+                transition: background-size .1s linear;
+                background-color: red;
+                border: 1rem solid red;
+                
+            }
+              
+        
+            .theme-description{
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                gap: 0;
+                font-weight: normal;
+                font-size: 1rem;
+                position: relative;
+                font-family: var(--roboto);
+                background-color: red;
+                
+            } */
+  }
