--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -114,7 +114,6 @@ body{
     .menu-button-grid{
         min-height: 66vh;
         width: 100%;
-        
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -136,20 +135,19 @@ body{
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    /* gap: 3rem; */
+    gap: 3rem;
 }
         .theme-ilustration{
             min-width: 20rem;
-            width: 40rem;
-            min-height: 30vh;
-            max-width: 80vw;
-            height: 40vh;
+            width: 35rem;
+            max-width: 78vw;
+            height: clamp(40vh,50vh,60vh);
             box-shadow: -10px 10px 10px #00000030;
             border-radius: 40px;
             opacity: 85%;
             background: url("./images/ilustration2.jpg");
             background-size: cover;
-            background-position: center;
+            background-position: 40%;
             position: relative;
             display: grid;
             place-items: center;
@@ -159,7 +157,9 @@ body{
           
     
         .theme-description{
+            
             width: fit-content;
+            max-width: 80vw;
             padding: 1rem;
             display: flex;
             flex-direction: column;
@@ -179,7 +179,7 @@ body{
     width: 90%;
     padding: 2rem 5%;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
     flex-wrap: wrap;
     gap: 1rem;
@@ -190,28 +190,21 @@ body{
         padding: 1rem;
         min-width: 10rem;
         min-height: 10rem;
-        display: flex;
-        justify-content: center;
-        align-items: flex-start;
-        flex-direction: column;
+        width: fit-content;
+        display: grid;
+        place-items: center;        
         filter: contrast(0%);
         transition: filter .2s linear;
         opacity: 90%;
     }
+  
     .footer-box:is(:focus,:hover,:active){
         filter: contrast(100%);
     }
-       .footer-box:nth-child(1){
-        display: grid;
-        place-items: center;
-    }
-
     .footer-box:nth-child(3){
-        display: flex;
-        justify-content: center;
-        align-items: flex-start;
-      
+        width: fit-content;
     }
+      
 
          
 
@@ -268,7 +261,7 @@ body{
         background: linear-gradient(to right,#EF4134,#FBB040);
         background-position: center;
         background-size: 180%;
-        width: 75%;
+        width: 70%;
         min-height: 3rem;
         height: 10%;
         font-family: var(--montserrat);
@@ -277,7 +270,7 @@ body{
         border-radius: 15px;
         font-weight: normal;
         transition: .1s scale ease-in-out;
-        box-shadow: 0px 3px 10px #00000050;
+        box-shadow: 0px 0px 5px #00000050;
     }
     .menu-button:is(:hover,:active,:focus){
         scale: 1.1;
@@ -294,13 +287,14 @@ body{
         
     }
     .main-description h2{
-        font-size: 4rem;
+        font-size: clamp(3rem,4rem,5vw);
         font-weight: 900;
         color: #000000;
+
     }
     .main-description h3{
         font-weight: normal;
-        font-size: 1.5rem;
+        font-size: clamp(1rem,1.5rem,5vw);
         color: transparent;
         background: linear-gradient(to right,#EF4134,#FBB040);
         background-clip: text;
@@ -309,6 +303,8 @@ body{
         font-family: var(--roboto);
         font-weight: 300;
         color: #000000;
+        font-size: clamp(0.8rem,1rem,5vw);
+
     }
 /* * Images */
 
