--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -11,8 +11,8 @@
 
  */
 
-:root{
-/*? backgrounds */
+:root {
+    /*? backgrounds */
 
     --LMbackground1: #eee;
     --LMbackground2: #eee;
@@ -22,23 +22,27 @@
     /*? colors */
 
     /*? fonts */
-    --montserrat: 'Montserrat', sans-serif;;
-    --roboto: 'Roboto', sans-serif;;
-    --roboto-mono: 'Roboto Mono', monospace; ;
+    --montserrat: 'Montserrat', sans-serif;
+    ;
+    --roboto: 'Roboto', sans-serif;
+    ;
+    --roboto-mono: 'Roboto Mono', monospace;
+    ;
 
 }
-body{
+
+body {
     margin: 0;
     padding: 0;
 }
 
 /* * Containers */
-.nav{
+.nav {
     width: 90%;
     padding: 0 5%;
     min-height: 4.5rem;
     height: 10vh;
-    
+
     background-color: #fff;
     box-shadow: 0px 2px 10px #00000010;
 
@@ -52,80 +56,82 @@ body{
 
 }
 
-    .menu{
-        z-index: 1;
-        position: fixed;
-        right: 0;
-        width: 20rem;
-        height: 100vh;
-        display: flex;
-        flex-direction: column;
-        bottom: 0;
-        height: 90vh;
-        padding-top: 4rem;
-        background-color: #fff;
-        transform: translate(20rem);
-        box-shadow: -4px 2px 10px #00000020;
-        transition: all 300ms;
-        padding-top: 4rem;
+.menu {
+    z-index: 1;
+    position: fixed;
+    right: 0;
+    width: 20rem;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    bottom: 0;
+    height: 90vh;
+    padding-top: 4rem;
+    background-color: #fff;
+    transform: translate(20rem);
+    box-shadow: -4px 2px 10px #00000020;
+    transition: all 300ms;
+    padding-top: 4rem;
 
-    }
-
-    
-    .menu-showed{
-        z-index: 1;
-        position: fixed;
-        right: 0;
-        width: 20rem;
-        height: 100vh;
-        display: flex;
-        flex-direction: column;
-        bottom: 0;
-        height: 90vh;
-        padding-top: 4rem;
-        background-color: #fff;
-        transform: translate(0rem);
-        box-shadow: -4px 2px 10px #00000020;
-        transition: all 300ms;
-
-    }
-        .menu-img{
-            width: 100%;
-            min-height: 10rem;
-            height: 11rem;
-            background: url("./images/menuback.jpg");
-            background-size: cover;
-            position: relative;
-            filter: brightness(80%);
-            display: grid;
-            place-items: center;
-        }
-        .menu-img::before{
-            content: '';
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            background: rgba(255, 255, 255, 0.123);
-            backdrop-filter: blur(2px);
-            -webkit-backdrop-filter: blur(2px);
-        
-        }
-           
-    .menu-button-grid{
-        min-height: 66vh;
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        gap: 1.5rem;
-        background: 0;
-    }
+}
 
 
+.menu-showed {
+    z-index: 1;
+    position: fixed;
+    right: 0;
+    width: 20rem;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    bottom: 0;
+    height: 90vh;
+    padding-top: 4rem;
+    background-color: #fff;
+    transform: translate(0rem);
+    box-shadow: -4px 2px 10px #00000020;
+    transition: all 300ms;
+
+}
+
+.menu-img {
+    width: 100%;
+    min-height: 10rem;
+    height: 11rem;
+    background: url("./images/menuback.jpg");
+    background-size: cover;
+    position: relative;
+    filter: brightness(80%);
+    display: grid;
+    place-items: center;
+}
+
+.menu-img::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.123);
+    backdrop-filter: blur(2px);
+    -webkit-backdrop-filter: blur(2px);
+
+}
+
+.menu-button-grid {
+    min-height: 66vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1.5rem;
+    background: 0;
+}
 
 
-.theme{
+
+
+.theme {
     width: 100%;
     height: 60vh;
     padding-top: 20vh;
@@ -137,45 +143,125 @@ body{
     flex-wrap: wrap;
     gap: 3rem;
 }
-        .theme-ilustration{
-            min-width: 20rem;
-            width: 35rem;
-            max-width: 78vw;
-            height: clamp(40vh,50vh,60vh);
-            box-shadow: -10px 10px 10px #00000030;
-            border-radius: 40px;
-            opacity: 85%;
-            background: url("./images/ilustration2.jpg");
-            background-size: cover;
-            background-position: 40%;
-            position: relative;
-            display: grid;
-            place-items: center;
-            transition: background-size .1s linear;
-            margin: 0;
-        }
-          
-    
-        .theme-description{
-            
-            width: fit-content;
-            max-width: 80vw;
-            padding: 1rem;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            gap: 0;
-            font-weight: normal;
-            font-size: 1rem;
-            position: relative;
-            font-family: var(--roboto);
-            
-        }
-.content{
-    width: 100%;
-    height: 200rem;
+
+.theme-ilustration {
+    min-width: 20rem;
+    width: 35rem;
+    max-width: 78vw;
+    height: clamp(40vh, 50vh, 60vh);
+    box-shadow: -10px 10px 10px #00000030;
+    border-radius: 40px;
+    opacity: 85%;
+    background: url("./images/ilustration2.jpg");
+    background-size: cover;
+    background-position: 40%;
+    position: relative;
+    display: grid;
+    place-items: center;
+    transition: background-size .1s linear;
+    margin: 0;
 }
-.footer{
+
+
+.theme-description {
+
+    width: fit-content;
+    max-width: 80vw;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 0;
+    font-weight: normal;
+    font-size: 1rem;
+    position: relative;
+    font-family: var(--roboto);
+
+}
+
+.content {
+    width: 100%;
+    padding: 10rem 0rem;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 5rem;
+    flex-direction: column;
+}
+
+.faq {
+    width: 100%;
+    padding: 5rem 0rem 10rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.faq-box {
+    width: clamp(30vw, 40rem, 70vw);
+    padding-left: 2rem;
+    height: clamp(3rem, 5rem, 10rem);
+    box-shadow: 0px 3px 10px #00000020;
+
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.faq-details {
+    width: clamp(30vw, 40rem, 70vw);
+    padding-left: 2rem;
+    height: 0;
+    overflow: hidden;
+    box-shadow: 0px 3px 10px #00000020;
+
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    transition: .2s all;
+}
+
+.faq-details-showed {
+    width: clamp(30vw, 40rem, 70vw);
+    height: 10rem;
+    overflow: hidden;
+    box-shadow: 0px 3px 10px #00000020;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+
+.faq-text {
+    width: 88%;
+    height: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.faq-button {
+    width: 5rem;
+    height: 100%;
+
+}
+
+.faq-button button {
+    width: 100%;
+    height: 100%;
+    border: 0;
+    background: linear-gradient(to right, #EF4134, #FBB040);
+    background-size: 300%;
+    background-position: center;
+    display: grid;
+    place-items: center;
+    color: #fff;
+}
+
+
+.footer {
     width: 90%;
     padding: 2rem 5%;
     display: flex;
@@ -185,138 +271,372 @@ body{
     gap: 1rem;
     background-color: #141416;
 }
-    .footer-box
-    {
-        padding: 1rem;
-        min-width: 10rem;
-        min-height: 10rem;
-        width: fit-content;
-        display: grid;
-        place-items: center;        
-        filter: contrast(0%);
-        transition: filter .2s linear;
-        opacity: 90%;
-    }
-  
-    .footer-box:is(:focus,:hover,:active){
-        filter: contrast(100%);
-    }
-    .footer-box:nth-child(3){
-        width: fit-content;
-    }
-      
 
-         
+.footer-box {
+    padding: 1rem;
+    min-width: 10rem;
+    min-height: 10rem;
+    width: fit-content;
+    display: grid;
+    place-items: center;
+    filter: contrast(0%);
+    transition: filter .2s linear;
+    opacity: 90%;
+}
+
+.footer-box:is(:focus, :hover, :active) {
+    filter: contrast(100%);
+}
+
+.footer-box:nth-child(3) {
+    width: fit-content;
+}
+
+.references-to-el {
+    max-width: 78vw;
+    width: 40rem;
+    height: clamp(30vh, 40vh, 60vh);
+
+    background-color: 0;
+    box-shadow: 0px 0px 20px #00000020;
+    border-radius: 20px;
+}
+
+.ref-el-name {
+    width: 100%;
+    height: 65%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    flex-direction: column;
+    font-family: var(--roboto);
+    gap: 0;
+    position: relative;
+}
+
+.ref-el-name::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 5rem;
+    height: 5rem;
+    border-top-left-radius: 20px;
+    border-bottom-right-radius: 100%;
+    background: linear-gradient(to right, #EF4134, #FBB040);
+    background-size: 300%;
+    background-position: center;
+    box-shadow: 0px 0px 10px #00000030;
+}
+
+
+.references-to-el:nth-child(2) .ref-el-name::before {
+    background: linear-gradient(to right, #8834ef, #40b0fb);
+    background-size: 180%;
+
+}
+
+.references-to-el:nth-child(2) h4 {
+    background: linear-gradient(to right, #8834ef, #40b0fb);
+    color: transparent;
+    background-clip: text;
+    background-size: 180%;
+
+}
+
+.references-to-el:nth-child(2) .ref-button {
+    background: linear-gradient(to right, #8834ef, #40b0fb);
+    background-size: 180%;
+
+
+}
+
+/*  */
+
+.references-to-el:nth-child(3) .ref-el-name::before {
+    background: linear-gradient(to right, #34efa1, #88fb40);
+    background-size: 180%;
+
+
+}
+
+.references-to-el:nth-child(3) h4 {
+    background: linear-gradient(to right, #34efa1, #88fb40);
+    background-size: 180%;
+
+    color: transparent;
+    background-clip: text;
+}
+
+.references-to-el:nth-child(3) .ref-button {
+    background: linear-gradient(to right, #34efa1, #88fb40);
+    background-size: 180%;
+
+
+}
+
+/*  */
+
+.references-to-el:nth-child(4) .ref-el-name::before {
+    background: linear-gradient(to right, #ef3444, #fb40a1);
+    background-size: 180%;
+
+
+}
+
+.references-to-el:nth-child(4) h4 {
+    background: linear-gradient(to right, #ef3444, #fb40a1);
+    background-size: 180%;
+
+    color: transparent;
+    background-clip: text;
+}
+
+.references-to-el:nth-child(4) .ref-button {
+    background: linear-gradient(to right, #ef3444, #fb40a1);
+    background-size: 180%;
+
+}
+
+/*  */
+
+.references-to-el:nth-child(5) .ref-el-name::before {
+    background: linear-gradient(to right, #5d5b63, #9c9599);
+    background-size: 180%;
+
+
+}
+
+.references-to-el:nth-child(5) h4 {
+    background: linear-gradient(to right, #5d5b63, #9c9599);
+    background-size: 180%;
+
+    color: transparent;
+    background-clip: text;
+}
+
+.references-to-el:nth-child(5) .ref-button {
+    background: linear-gradient(to right, #5d5b63, #9c9599);
+    background-size: 180%;
+
+}
+
+
+
+
+
+
+.ref-el-buttonbox {
+    width: 90%;
+    padding: 0 5%;
+    height: 25%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+
+}
+
+
 
 
 
 
 /* * Buttons */
-    .img-button{
-        width: 2rem;
-        height: 2rem;
-        border: 0;
-        background: 0;
-        margin: 1rem;
-        transition: .2s scale ease;
-        filter: drop-shadow(0px 5px 5px #00000010);
-    }
+.img-button {
+    width: 2rem;
+    height: 2rem;
+    border: 0;
+    background: 0;
+    margin: 1rem;
+    transition: .2s scale ease;
+    filter: drop-shadow(0px 5px 5px #00000010);
+}
 
-    .img-button:is(:hover,:focus,:active){
-        scale: 1.1;
-    }
-  
-        .logo{
-            background: url("./images/mcssel.png");
-            background-size: cover;
-            width: 4.5rem;
-            height: 4.5rem;
-            position: relative;
-        }
-        .hamburger{
-            width: 2.2rem;
-            height: 2.2rem;
-            position: relative;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-around;
-            align-items: center;
-        }
-            .line{
-                width: 100%;
-                height: 4px;
-                background-color: #000000;
-            }
-        .github1{
-            background: url("./images/github.png");
-            background-size: cover;
-        }
-        .github2{
-            background: url("./images/github1.png");
-            background-size: cover;
-        }
+.img-button:is(:hover, :focus, :active) {
+    scale: 1.1;
+}
 
-    .menu-button{
-        border: 0;
-        background: linear-gradient(to right,#EF4134,#FBB040);
-        background-position: center;
-        background-size: 180%;
-        width: 70%;
-        min-height: 3rem;
-        height: 10%;
-        font-family: var(--montserrat);
-        color: #fff;
-        font-size: 0.9rem;
-        border-radius: 15px;
-        font-weight: normal;
-        transition: .1s scale ease-in-out;
-        box-shadow: 0px 0px 5px #00000050;
-    }
-    .menu-button:is(:hover,:active,:focus){
-        scale: 1.1;
-    }
- 
+.logo {
+    background: url("./images/mcssel.png");
+    background-size: cover;
+    width: 4.5rem;
+    height: 4.5rem;
+    position: relative;
+}
+
+.hamburger {
+    width: 2.2rem;
+    height: 2.2rem;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.line {
+    width: 100%;
+    height: 4px;
+    background-color: #000000;
+}
+
+.github1 {
+    background: url("./images/github.png");
+    background-size: cover;
+}
+
+.github2 {
+    background: url("./images/github1.png");
+    background-size: cover;
+}
+
+.menu-button {
+    border: 0;
+    background: linear-gradient(to right, #EF4134, #FBB040);
+    background-position: center;
+    background-size: 180%;
+    width: 70%;
+    min-height: 3rem;
+    height: 10%;
+    font-family: var(--montserrat);
+    color: #fff;
+    font-size: 0.9rem;
+    border-radius: 15px;
+    font-weight: normal;
+    transition: .1s scale ease-in-out;
+    box-shadow: 0px 0px 5px #00000050;
+}
+
+.menu-button:is(:hover, :active, :focus) {
+    scale: 1.1;
+}
+
+
+.ref-button {
+    padding: 1rem 2rem;
+    background: linear-gradient(to right, #EF4134, #FBB040);
+    background-position: center;
+    background-size: 180%;
+    border: 0;
+
+    font-family: var(--roboto);
+    font-weight: 500;
+    color: #000000;
+    font-size: clamp(0.8rem, 1rem, 5vw);
+    color: #fff;
+    border-radius: 10px;
+    opacity: 90%;
+    transition: opacity .2s linear, scale .2s ease-in-out;
+    box-shadow: 0px 0px 10px #00000030;
+
+}
+
+.ref-button:is(:active, :hover, :focus) {
+    opacity: 100%;
+    scale: 1.1;
+}
 
 
 /* * Text */
-    .main-description h2,h3{
-        font-family: var(--roboto);
-        margin: 0;
-        padding: 0;
-        text-shadow: 0px 10px 10px #00000010;
-        
-    }
-    .main-description h2{
-        font-size: clamp(3rem,4rem,5vw);
-        font-weight: 900;
-        color: #000000;
+.main-description h2,
+h3 {
+    font-family: var(--roboto);
+    margin: 0;
+    padding: 0;
+    text-shadow: 0px 10px 10px #00000010;
 
-    }
-    .main-description h3{
-        font-weight: normal;
-        font-size: clamp(1rem,1.5rem,5vw);
-        color: transparent;
-        background: linear-gradient(to right,#EF4134,#FBB040);
-        background-clip: text;
-    }
-    .theme-description h4{
-        font-family: var(--roboto);
-        font-weight: 300;
-        color: #000000;
-        font-size: clamp(0.8rem,1rem,5vw);
+}
 
-    }
+.main-description h2 {
+    font-size: clamp(3rem, 4rem, 5vw);
+    font-weight: 900;
+    color: #000000;
+
+}
+
+.main-description h3 {
+    font-weight: normal;
+    font-size: clamp(1rem, 1.5rem, 5vw);
+    color: transparent;
+    background: linear-gradient(to right, #EF4134, #FBB040);
+    background-clip: text;
+}
+
+.theme-description h4 {
+    font-family: var(--roboto);
+    font-weight: 300;
+    color: #000000;
+    font-size: clamp(0.8rem, 1rem, 5vw);
+
+}
+
+
+.ref-el-name h2 {
+    font-size: clamp(3rem, 4rem, 5vw);
+    font-weight: 900;
+    color: #000000;
+    margin: 0;
+    text-shadow: 0px 8px 10px #00000010;
+
+}
+
+.ref-el-name h4 {
+    width: 60vw;
+    text-align: center;
+    font-weight: normal;
+    font-size: clamp(0.8rem, 1.2rem, 4.5vw);
+    color: transparent;
+    background: linear-gradient(to right, #EF4134, #FBB040);
+    background-clip: text;
+    margin: 0.4rem;
+    text-shadow: 0px 8px 10px #00000010;
+
+
+}
+
+
+.faq-text h2 {
+    font-family: var(--roboto);
+    font-weight: 400;
+    font-size: clamp(0.4rem, 1.2rem, 4.5vw);
+    color: #00000080;
+    margin: 0;
+    text-shadow: 0px 8px 10px #00000010;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+
+.faq-details h4 {
+    width: 90%;
+    font-family: var(--roboto);
+    font-weight: 400;
+    font-size: clamp(1rem, 1.1rem, 1.3vw);
+    color: #00000080;
+    margin: 0;
+    text-shadow: 0px 8px 10px #00000010;
+}
+
+.faq-button h2 {
+    font-family: var(--roboto);
+    color: #fff;
+}
+
+
 /* * Images */
 
-.mrce{
+.mrce {
     width: 10rem;
     height: 10rem;
     border: 0;
     outline: 0;
 }
-    
+
 /* * Special */
-.special{
+.special {
     position: absolute;
     filter: brightness(120%);
     border: none;
@@ -324,11 +644,12 @@ body{
     transition: .1s scale ease-in-out;
 }
 
-.special:is(:hover,:focus,:active){
+.special:is(:hover, :focus, :active) {
     scale: 1.5;
     animation: shake 300ms;
 }
-.footer-text{
+
+.footer-text {
     font-family: var(--roboto);
     color: #fff;
     opacity: 90%;
@@ -337,10 +658,12 @@ body{
     margin: 0.2rem;
     cursor: default;
 }
-    .anim-scale-text:is(:hover,:active,:focus){
-        scale: 1.1;
-    }
-.big-footer-text{
+
+.anim-scale-text:is(:hover, :active, :focus) {
+    scale: 1.1;
+}
+
+.big-footer-text {
     font-family: var(--roboto);
     color: #fff;
     opacity: 90%;
@@ -350,40 +673,45 @@ body{
     font-size: 1.5rem;
 }
 
-.gradient-text{
+.gradient-text {
     background-size: 500%;
     color: transparent;
     color: #fff;
     background-clip: text;
 
 }
-.gradient-text b{
+
+.gradient-text b {
     background-size: 500%;
     color: transparent;
-    background: linear-gradient(to right,#EF4134,#FBB040);
+    background: linear-gradient(to right, #EF4134, #FBB040);
     background-clip: text;
     font-weight: 700;
 }
+
 /* *Animation */
 
 @keyframes shake {
-    0%{
+    0% {
         translate: 0%;
     }
-    50%{
+
+    50% {
         translate: -5%;
     }
-    75%{
+
+    75% {
         translate: 5%;
     }
-    100%{
+
+    100% {
         translate: 0%;
     }
 }
 
 
 /* !MEDIA QUERIES */
- 
+
 
 /* @media only screen and (max-width: 730px) {
     .theme{
@@ -429,4 +757,3 @@ body{
                 background-color: red;
                 
             } */
-  
