--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -503,12 +503,42 @@ body {
     font-size: 0.9rem;
     border-radius: 15px;
     font-weight: normal;
-    transition: .1s scale ease-in-out;
+    transition: .1s scale ease-in-out, .1s opacity ease-in-out;
     box-shadow: 0px 0px 5px #00000050;
+    opacity: 90%;
 }
+
+.menu-button:nth-child(2){
+    background: linear-gradient(to right, #8834ef, #40b0fb);
+    background-size: 200%;
+    background-position: center;
+
+}
+.menu-button:nth-child(3){
+    background: linear-gradient(to right, #34efa1, #88fb40);
+    background-size: 200%;
+    background-position: center;
+    
+}
+.menu-button:nth-child(4){
+    background: linear-gradient(to right, #ef3444, #fb40a1);
+    background-size: 200%;
+    background-position: center;
+    
+}
+.menu-button:nth-child(5){
+    background: linear-gradient(to right, #5d5b63, #9c9599);
+    background-size: 200%;
+    background-position: center;
+    
+}
+
+
+
 
 .menu-button:is(:hover, :active, :focus) {
     scale: 1.1;
+    opacity: 100%;
 }
 
 
